TCL-1259 and search icon alignment issue fixed

--- a/ext/marketplace/marketplacestorefront/web/webroot/_ui/responsive/theme-luxury/sass/site/layout/_header.scss
+++ b/ext/marketplace/marketplacestorefront/web/webroot/_ui/responsive/theme-luxury/sass/site/layout/_header.scss
@@ -126,11 +126,11 @@ ul.tabs{
         }
         span.login-user{
             display: block;
-            width: 23px;
+            /*width: 23px;
             height: 23px;
             background-image: $Sprite_icon;
             background-position: -944px -49px;
-            background-color: transparent;
+            background-color: transparent;*/
             
             &:before, &:after {
                 display: none;
@@ -435,6 +435,7 @@ ul.tabs{
 							margin: 0 auto;
                             
                             .col-md-3{
+                                
                                 .sub-menu{
                                     text-transform: capitalize;
                                 }
@@ -537,7 +538,7 @@ ul.tabs{
             li{
                 ul{
                     li{
-                        .sub-menu-toggle{
+                        .sub-menu-toggle{                            
                             &:before, &:after{
                                 opacity: 0.3;
                             }
@@ -615,13 +616,17 @@ ul.tabs{
                     height: 26px;
                     /*margin-right: 30px;*/
                     position: relative;
+                    @include media-breakpoint-down(sm) {
+                        display: none;
+                    }
                 }
 				&.header-search-link {
-                    width: 33px;
+                    width: 25px;
                     height: 30px;
 					overflow: hidden;
                     position: relative;
                     margin-right: 20px;
+                    
                     
                     @include media-breakpoint-down(sm) {
                         margin-right: 0px;
@@ -630,6 +635,7 @@ ul.tabs{
 					/*@include media-breakpoint-up(md) {
 						width: auto;
 					}*/
+                    
 					a {
 						position: relative;						
 						text-decoration: none;
@@ -639,11 +645,16 @@ ul.tabs{
 							left: 0;
 							content: "";
 							background: $Sprite_icon -1086px -90px no-repeat;
-                            width: 33px;
+                            width: 25px;
                             height: 30px;
 						}
 					}
 				}
+                
+                &.logged_in{
+                   width: 33px; 
+                }
+                
 				&.header-wishlist-link {
 					a {
 						background: $Sprite -36px -2px no-repeat;
@@ -742,6 +753,8 @@ ul.tabs{
 					}
 			}
 		}
+        
+        
 	}
 	.logged_in, .sign-out {
 		@include media-breakpoint-down(sm) {
@@ -1403,9 +1416,11 @@ ul.tabs{
             background-color: #fff;
         }
         &:before {
+            -webkit-transform: rotate(45deg);
            transform: rotate(45deg);
         }
         &:after {
+             -webkit-transform: rotate(-45deg);
             transform: rotate(-45deg);
         }
     }
@@ -1429,6 +1444,7 @@ ul.tabs{
             display: block;
             cursor: pointer;
             z-index: 1;
+           -webkit-transform: rotate(40deg);
             transform: rotate(40deg);
             @include transition(all 0.3s ease-in-out);
 
@@ -1441,6 +1457,7 @@ ul.tabs{
 
             &:before {
                 height: 15px;
+                 -webkit-transform: rotate(185deg);
                 transform: rotate(185deg);
                 top: 3px;
                 left: 11px;
@@ -1448,11 +1465,13 @@ ul.tabs{
             }
             &:after {
                 height: 15px;
+                 -webkit-transform: rotate(90deg);
                 transform: rotate(90deg);
                 top: 10px;
                 left: 3px;
             }
             &.active {
+                 -webkit-transform: rotate(220deg);
                 transform: rotate(220deg);
                 top: 35px;
                 right: 15px;
@@ -1466,6 +1485,7 @@ ul.tabs{
             display: block;
             cursor: pointer;
             z-index: 1;
+            -webkit-transform: rotate(40deg);
             transform: rotate(40deg);
             @include transition(all 0.3s ease-in-out);
 
@@ -1477,17 +1497,20 @@ ul.tabs{
             }
 
             &:before {
+                -webkit-transform: rotate(185deg);
                 transform: rotate(185deg);
                 top: 0px;
                 right: 0;
                 left: 11px;
             }
             &:after {
+                -webkit-transform: rotate(90deg);
                 transform: rotate(90deg);
                 top: 10px;
                 left: 0px;
             }
             &.active {
+                -webkit-transform: rotate(180deg);
                 transform: rotate(180deg);
                 top: 35px;
             }           
